<resources>
    <string name="app_name">SeeNear</string>
    <string name="app_ex">Efficient social welfare and nursing care, join us with SeeNear!</string>

    <!--    회원가입-->

    <string name="user_signup">Start as a user</string>
    <string name="admin_signup">Start as a caregiver</string>
    <string name="name">Name</string>
    <string name="put_name">Please input name</string>
    <string name="phone_number">Phone</string>
    <string name="put_phone_number">Please input phone number</string>
    <string name="sendnumber">send</string>
    <string name="verifynumber">verify</string>
    <string name="verifynumber2">Verify authentication code</string>
    <string name="signup">Sign up</string>
    <string name="signup_underline"><u>Sign up</u></string>
    <string name="register_user">Register User</string>
    <string name="put_auth_number">Please enter the verification code</string>


    <!--    로그인-->

    <string name="seeNear">SeeNear</string>
    <string name="toPhone">Phone Number</string>
    <string name="login">Log In</string>
    <string name="login_user_underline"><u>User Log In</u></string>
    <string name="login_admin_underline"><u>Caregiver Log In</u></string>
    <string name="login_text">Do you already have an account?</string>
    <string name="signup_text">Don\'t you have an account?</string>


    <!--    유저 등록-->
    <string name="registUser">Please register a user</string>
    <string name="registUser_detail">Register additional information</string>
    <string name="regist_check">Verification</string>
    <string name="regist_hint">Please enter the phone number</string>
    <string name="birth">Date of birth</string>
    <string name="put_birth">Please select your date of birth</string>
    <string name="family">Emergency contacts (up to 3 people)</string>
    <string name="family_add">Add contact</string>
    <string name="home">Address</string>
    <string name="put_home">Please select an address.</string>
    <string name="put_home_detail">Please enter the detailed address.</string>
    <string name="disease">만성 질환이 있으신가요?</string>
    <string name="disease_text">질환 종류를 선택해주세요</string>
    <string name="medicine">Medication taken on a regular basis</string>
    <string name="medicine_text">Please enter the type of medication.</string>

    <string name="medicine_period">Select medication frequency</string>
    <string name="family_name">Name</string>
    <string name="family_phone">Phone</string>
    <string name="family_relation">Relation</string>
    <string name="skipBtn"><u>Skip</u></string>
    <string name="next">Next</string>
    <string name="registUserBtn">User registration</string>
    <string name="verifyUserInfo">Please verify the target\'s information.</string>
    <string name="verifyUserInfo_right">The correct target has been identified.</string>

    <!--    위치 검색-->

    <string name="please_input_search_keyword">Please enter a search term.</string>
    <string name="search">search</string>
    <string name="empty_result_text">No search results found.</string>

    <string name="google_map_key">AIzaSyBQQX8q_Y1WyWoOCafRfzbAFUCBcRSDfUg</string>


    <!--    개인정보 수정-->
    <string name="modify_user_info">Modify personal information</string>

    <!--    약 등록 및 수정-->
    <string name="medicine_create1">Medication taken on a regular basis</string>
    <string name="medicine_create2">Medication taken on a regular basis</string>
    <string name="medicine_create3">Select medication frequency</string>
    <string name="medicine_create4">Register medication information</string>


</resources>