<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity.RegisterActivity.RegisterActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".UserActivity.usersignup.UserSignupActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">


            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icon_arrow_left" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckedTextView
                android:id="@+id/disease_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registUser_detail"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/skip_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="8dp"
                android:background="#00FFFFFF"
                android:gravity="center|right"
                android:inputType="phone"
                android:text="@string/skipBtn"
                android:textColor="@color/theme_orange"
                android:textSize="12dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/disease_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <CheckedTextView
                    android:id="@+id/disease_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disease"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/disease_input"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_edittext">

                    <Spinner
                        android:id="@+id/disease_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="-38dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/disease_edittext"
                        app:layout_constraintStart_toStartOf="@+id/disease_edittext"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/disease_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:background="#00FFFFFF"
                        android:hint="@string/disease_text"
                        android:inputType="text"
                        android:maxLength="10"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/medicine_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <CheckedTextView
                    android:id="@+id/medicine_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/medicine_input"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_edittext">

                    <EditText
                        android:id="@+id/medicine_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:background="#00FFFFFF"
                        android:hint="@string/medicine_text"
                        android:inputType="text"
                        android:maxLength="10"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <CheckedTextView
                    android:id="@+id/medicine_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/medicine_period"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/medicine_period_input"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/round_edittext">

                    <Spinner
                        android:id="@+id/medicine_spinner1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="-38dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/medicine_spinner_text1"
                        app:layout_constraintStart_toStartOf="@+id/medicine_spinner_text1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/medicine_spinner_text1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:background="#00FFFFFF"
                        android:hint="1일"
                        android:inputType="text"
                        android:maxLength="10"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <Spinner
                        android:id="@+id/medicine_spinner2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="-38dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/medicine_spinner_text2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/medicine_spinner_text2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:background="#00FFFFFF"
                        android:hint="3회"
                        android:inputType="text"
                        android:maxLength="10"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/medicine_spinner1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/round_edittext_green">

                <TextView
                    android:id="@+id/regist_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:inputType="phone"
                    android:text="@string/registUserBtn"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>